loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:4: error: not found: value c
    c=0
    ^Poucet1:6: error: not found: value c
      c=c+1
      ^Poucet1:8: error: not found: value c
  if (c<=2) {
      ^