loopdowhile.Poucet1.scala.code
while (!sortieTrouvee()) {
	for (i <- 1 to 5) {
  	avance()
    c=0
  	if (estSurBiscuit()) {
    	c=c+1
  	}
  if (c<=2) {
    droite()
  }
  else {
    gauche()
  }
	}
}